[workspace]
members = ["leptos-mview-core", "leptos-mview-macro"]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blorbb/leptos-mview"

[package]
name = "leptos-mview"
keywords = ["macro", "leptos", "view"]
description = "A concise view macro for Leptos"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leptos-mview-macro = { path = "leptos-mview-macro", version = "0.4.1" }

[dev-dependencies]
trybuild = "1"
# needs to use ssr for some view-to-HTML features to work.
leptos = { version = "0.7.5", features = ["ssr", "nightly"] }
leptos_router = { version = "0.7.5", features = ["ssr", "nightly"] }
leptos-mview = { path = ".", features = ["nightly"] }

[features]
nightly = ["leptos-mview-macro/nightly"]
