[workspace]
members = ["leptos-mview-core", "leptos-mview-macro"]

[workspace.package]
version = "0.4.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blorbb/leptos-mview"

[package]
name = "leptos-mview"
keywords = ["macro", "leptos", "view"]
description = "A concise view macro for Leptos"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-error2 = "2"

# dev dependencies #
trybuild = "1"
# needs to use ssr for some view-to-HTML features to work.
leptos = { version = "0.7.5", features = ["ssr", "nightly"] }
leptos_router = { version = "0.7.5", features = ["ssr", "nightly"] }

[dependencies]
leptos-mview-macro = { path = "leptos-mview-macro", version = "0.4.4" }

[dev-dependencies]
trybuild.workspace = true
leptos.workspace = true
leptos_router.workspace = true
leptos-mview = { path = ".", features = ["nightly"] }

[features]
nightly = ["leptos-mview-macro/nightly"]
