[package]
name = "leptos-mview-core"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Main implementation of leptos-mview"
repository = "https://github.com/blorbb/leptos-mview"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = [] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = { version = "1", default-features = false }
