[package]
name = "leptos-mview-core"
description = "Main implementation of leptos-mview"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = { version = "2", features = [] }
quote = "1"
proc-macro2 = "1"
proc-macro-error2 = "2"
