[package]
name = "leptos-mview-core"
description = "Main implementation of leptos-mview"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true
