[package]
name = "leptos-mview-macro"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macro export for leptos-mview"
repository = "https://github.com/blorbb/leptos-mview"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = { version = "1", default-features = false }
leptos-mview-core = { path = "../leptos-mview-core", version = "0.3.2" }
