[package]
name = "leptos-mview-macro"
description = "Proc macro export for leptos-mview"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error2 = "2"
leptos-mview-core = { path = "../leptos-mview-core", version = "0.4.1" }

[features]
nightly = ["proc-macro-error2/nightly"]
