[package]
name = "leptos-mview-macro"
description = "Proc macro export for leptos-mview"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
proc-macro-error2.workspace = true
leptos-mview-core = { path = "../leptos-mview-core", version = "0.4.3" }

# needed for doctests to run
[dev-dependencies]
leptos.workspace = true

[features]
nightly = ["proc-macro-error2/nightly"]
